# hunming

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: aliases.toml
src/: cli.rs  completion.rs  config.rs  fs.rs  install.rs  lib.rs  main.rs  model.rs  paths.rs  render.rs  tui.rs  validation.rs
tests/: add.rs  apply.rs  backup_restore.rs  completions.rs  config.rs  config_parse.rs  doctor.rs  edit.rs  fs.rs  init.rs  list.rs  managed_block.rs  model.rs  paths.rs  remove.rs  render_bash.rs  render_powershell.rs  show.rs  validation.rs
